--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,9 +1,9 @@
 // ==================
 // color
-$green-1: #e813a4;
-$green-2: #e33bae;
+$green-1: #992F3B;
+$green-2: #993f3b;
 $green-3: #e35bb8;
-$green-4: #e381c4;
+$green-4: #990f3b;
 $gray-1: #333333;
 $gray-2: #4D4D4D;
 $gray-3: #808080;
